# 01-rcli

./: CHANGELOG.md  Cargo.toml  cliff.toml  deny.toml  test.rest
fixtures/: b64.txt  blake3.txt  chacha20poly1305key.txt  ed25519.pk  ed25519.sk
src/: lib.rs  main.rs  opts.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs  textcipher.rs
src/process/: b64.rs  csv_convert.rs  http_serve.rs  mod.rs  text.rs  text_cipher.rs
